# databricks-agent-interop

./: .env.example  .gitignore  Makefile  README.md  databricks.yml  pyproject.toml  requirements.txt
.claude-flow/: agents.json
.claude-flow/hive-mind/: state.json
.claude-flow/memory/: store.json
apim/fragments/: jwt-validation.xml  token-exchange.xml  uc-auth.xml
apim/policies/: agent-card.xml  agent-get.xml  agent-rpc.xml  agent-stream.xml  agents-list.xml  api-policy.xml
app/: __init__.py  authorization.py  config.py  discovery.py  main.py  models.py
apps/calculator/: app.yaml  pyproject.toml
apps/calculator/agent_server/: __init__.py  agent.py  start_server.py
config/: .env  .env.example  gateway.yaml
config/environments/: dev.yaml  prod.yaml  staging.yaml
docs/integration/: COPILOT.md  FOUNDRY.md
foundry/: README.md  ai_services_connection.yaml  create_agent.py  deploy_agent.py  deploy_simple_agent.py  requirements.txt  setup_oauth_connection.py  test_mcp_debug.py  traced_agent_client.py
gateway/: __init__.py  app.yaml  config.py  main.py  requirements.txt
gateway/models/: __init__.py  agent.py  responses.py  trace.py
gateway/routes/: __init__.py  agents.py  health.py
gateway/services/: __init__.py  authorization.py  discovery.py  proxy.py  tracing.py
infra/: .terraform.lock.hcl  Makefile  api.tf  apim.tf  config.tf  create-sp-secret.sh  import-existing.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/azure/: README.md
notebooks/: 01_deploy_apps.py  02_register_agents.py  03_test_interop.py  README.md  a2a_agent_deploy.py  a2a_demo.py  foundry_traces_to_mlflow.py  mlflow_traces.py  register_uc_functions.py  requirements.txt  settings.yaml.example
scripts/: create_agent_connection.py  generate_agent_card.py  test_agent_card_compliance.py
src/: __init__.py
src/agents/: __init__.py
src/auth/: __init__.py
src/mcp/: __init__.py
src/pipelines/: agent_traces_pipeline.py
static/mermaid/: a2a-gateway-architecture.mmd  obo-authentication-flow.mmd
tests/: README.md  __init__.py  conftest.py  pytest.ini  requirements.txt  run_tests.py  test_mcp_functions.py
tests/integration/: __init__.py  test_a2a_compliance.py  test_a2a_sdk_client.py  test_access_control.py  test_agent_cards.py  test_auth.py  test_discovery.py  test_gateway.py  test_proxy.py  test_tracing.py
tests/unit/: __init__.py  test_agent_card_generation.py  test_agent_connection.py  test_agents.py  test_authorization.py  test_models.py  test_orchestrator.py  test_trace_models.py  (+1 more)
(+30 files in other folders)
