[project]
name = "calculator-agent"
version = "0.1.0"
description = "Calculator agent with OBO authentication"
requires-python = ">=3.11"
dependencies = [
    "mlflow>=3.9.0",
    "databricks-sdk>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
start-server = "agent_server.start_server:main"
